# office-payment-mgt-backend

./: README.md  SEED.md  app.py  main.py  pyproject.toml  started
core/: config.py  db.py  security.py
models/: personnel.py  schema.py  user.py
routes/: admin.py  analytics.py  auth.py  personnel.py
seed/: create_admin.py  update_admin_password.py
