[project]
name = "office-payment-mgt-backend"
version = "0.1.0"
description = "Office payment management system"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bcrypt>=5.0.0",
    "beanie>=2.0.1",
    "flask>=3.1.2",
    "flask-bcrypt>=1.0.1",
    "flask-cors>=6.0.1",
    "flask-jwt-extended>=4.7.1",
    "motor>=3.7.1",
    "pymongo>=4.15.4",
    "python-dotenv>=1.2.1",
]
